<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tomorrow X Together</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="stringMembers">Mmembers</string>
    <string name="stringDiscography">Discography</string>
    <string name="stringFavorites">Favorites</string>
    <string name="title_activity_members">MembersActivity</string>
    <string name="stringBack">Back</string>
    <string name="stringSoobin">Soobin</string>
    <string name="stringYeonjun">Yeonjun</string>
    <string name="stringKai">Huening Kai</string>
    <string name="stringTaehyun"></string>
    <string name="stringTaehyun2">Taehyun</string>
    <string name="stringBeomgyu">Beomgyu</string>
    <string name="title_activity_soobin">SoobinActivity</string>
    <string name="stringPlaceHolder">Text Goes Here</string>
    <string name="title_activity_yeonjun">YeonjunActivity</string>
    <string name="title_activity_taehyun">TaehyunActivity</string>
    <string name="title_activity_huening_kai">HueningKaiActivity</string>
    <string name="title_activity_beomgyu">BeomgyuActivity</string>
    <string name="title_activity_discography">DiscographyActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="stringFavoritesMessage">Your Favorites</string>
    <string name="stringMagic">The Dream Chapter: Magic</string>
    <string name="stringStar">The Dream Chapter: Star</string>
    <string name="stringCatDog">Cat &amp; Dog: English Version</string>
    <string name="stringOurSummer">Our Summer Acoustic Mix</string>
    <string name="stringDiscographyMessage">Discography</string>
    <string name="stringMembersMessage">Members</string>
    <string name="title_activity_magic">MagicActivity</string>
    <string name="title_activity_star">StarActivity</string>
    <string name="title_activity_cat_dog">CatDogActivity</string>
    <string name="title_activity_our_summer">OurSummerActivity</string>
    <string name="stringCatDogMessage">Text Goes Here</string>
    <string name="stringOurSummerMessage">Text Goes Here</string>
    <string name="stringMagicMessage">Text Goes Here</string>
    <string name="stringStarMessage">Text Goes Here</string>
    <string name="stringMembers2">Members</string>
    <string name="stringFave">Add To Favorites</string>
    <string name="StringTXT">Tomorrow X Together!</string>
    <string name="StringContact">Contact Me!</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="stringSubmit">Submit</string>
    <string name="stringFnameHint">First Name</string>
    <string name="stringLnameHint">Last Name</string>
    <string name="stringEmailHint">Email</string>
    <string name="stringMessage">Message</string>
    <string name="stringOutput"></string>
    <string name="stringReturn">Return to Contact Form</string>
    <string name="StringContactButton">Contact Me</string>

</resources>
