<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomorrowxtogether.MembersActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/buttonSoobin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonKai"
        android:layout_alignBottom="@+id/buttonKai"
        android:layout_alignParentRight="true"
        android:text="@string/stringSoobin"
        android:onClick="SoobinClick" />

    <Button
        android:id="@+id/buttonMemberBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/stringBack" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonTaehyun"
        android:src="@drawable/ic_group" />

    <Button
        android:id="@+id/buttonKai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonTaehyun"
        android:layout_centerHorizontal="true"
        android:onClick="KaiClick"
        android:text="@string/stringKai" />

    <Button
        android:id="@+id/buttonTaehyun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonBeomgyu"
        android:layout_alignParentRight="true"
        android:layout_marginRight="48dp"
        android:onClick="TaehyunClick"
        android:text="@string/stringTaehyun2" />

    <Button
        android:id="@+id/buttonBeomgyu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMemberBack2"
        android:layout_marginRight="36dp"
        android:layout_marginTop="86dp"
        android:layout_toLeftOf="@+id/buttonTaehyun"
        android:onClick="BeomgyuClick"
        android:text="@string/stringBeomgyu" />

    <Button
        android:id="@+id/buttonYeonjun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonKai"
        android:layout_alignBottom="@+id/buttonKai"
        android:layout_alignParentLeft="true"
        android:text="@string/stringYeonjun" 
        android:onClick="YeonjunClick"/>

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMemberBack2"
        android:layout_centerHorizontal="true"
        android:text="@string/stringMembers2" 
        android:textSize="30dp"/>

</RelativeLayout>