<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomorrowxtogether.DiscographyActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/buttonDiscographyBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/stringBack"/>

    <Button
        android:id="@+id/buttonOurSummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonCatDog"
        android:layout_below="@+id/buttonCatDog"
        android:onClick="OurSummerClick"
        android:text="@string/stringOurSummer" />

    <TextView
        android:id="@+id/textViewDiscography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDiscographyBack"
        android:layout_centerHorizontal="true"
        android:text="@string/stringDiscography"
        android:textSize="30dp" />

    <Button
        android:id="@+id/buttonMagic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewDiscography"
        android:onClick="MagicClick"
        android:text="@string/stringMagic" />

    <Button
        android:id="@+id/buttonStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonOurSummer"
        android:layout_below="@+id/buttonMagic"
        android:onClick="StarClick"
        android:text="@string/stringStar" />

    <Button
        android:id="@+id/buttonCatDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonMagic"
        android:layout_below="@+id/buttonStar"
        android:onClick="CatDogClick"
        android:text="@string/stringCatDog" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonCatDog"
        android:src="@drawable/ic_disc" />

</RelativeLayout>
