<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomorrowxtogether.BeomgyuActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/buttonBeomgyuBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/stringBack"/>

    <Button
        android:id="@+id/buttonBeomgyuFave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="faveClick"
        android:text="@string/stringFave" />

    <TextView
        android:id="@+id/textViewBeomgyuPlaceHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBeomgyuFave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:text="@string/stringPlaceHolder" />

    <TextView
        android:id="@+id/textViewBeomgyuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBeomgyuBack"
        android:layout_centerHorizontal="true"
        android:text="Beomgyu"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textViewBeomgyuName"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_beomgyu" />

</RelativeLayout>

