<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomorrowxtogether.OurSummerActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/buttonOurSummerBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/stringBack" />

    <Button
        android:id="@+id/buttonOurSummerFave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/stringFave" 
        android:onClick="faveClick"/>

    <TextView
        android:id="@+id/textViewOurSummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOurSummerFave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:text="@string/stringOurSummerMessage" />

    <TextView
        android:id="@+id/textViewOurSummerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonOurSummerBack"
        android:text="Our Summer: Acoustic Version"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textViewOurSummerName"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_our_summer" />

</RelativeLayout>

